@@ -9,12 +9,12 @@ import io.swagger.v3.oas.models.info.License;
 import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.servers.Server;
-import org.springdoc.core.GroupedOpenApi;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -49,7 +49,7 @@ public class HibernateConfig {
                 .externalDocs(new ExternalDocumentation()
                         .description("SpringShop Wiki Documentation")
                         .url("https://springshop.wiki.github.org/docs"))
-                .servers(List.of(
+                .servers(Arrays.asList(
 //                        new Server().url("http://10.10.3.147:8080").description("Daxshatli Server"),
 //                        new Server().url("http://localhost:8080").description("Production Server"),
                         new Server().url("http://localhost:8081").description("Main Server")
@@ -63,19 +63,19 @@ public class HibernateConfig {
                 ));
     }
 
-    @Bean
-    public GroupedOpenApi authOpenApi() {
-        return GroupedOpenApi.builder()
-                .group("auth")
-                .pathsToMatch("/api/v1/auth/**")
-                .build();
-    }
-
-    @Bean
-    public GroupedOpenApi allOpenApi() {
-        return GroupedOpenApi.builder()
-                .group("all")
-                .pathsToMatch("/**")
-                .build();
-    }
+//    @Bean
+//    public GroupedOpenApi authOpenApi() {
+//        return GroupedOpenApi.builder()
+//                .group("auth")
+//                .pathsToMatch("/api/v1/auth/**")
+//                .build();
+//    }
+//
+//    @Bean
+//    public GroupedOpenApi allOpenApi() {
+//        return GroupedOpenApi.builder()
+//                .group("all")
+//                .pathsToMatch("/**")
+//                .build();
+//    }
 }
